feat(data-1155): add metrics to store HTTP statuses from feed providers URL call and an API to return daily statuses for all feed providers
* when calling feed providers discovery URL, if http status is in range 2xx then it is considered a successful call
* otherwise it is considered to be a failed call
* count these HTTP statuses in PROMETHEUS (metrics: app.lamassu.incoming.data.monitoring)
* add an API that returns daily feed providers statuses (GREEN = all providers HTTP call were successful today; RED = last HTTP call failed for provider, ORANGE = last call was successful but at least one call failed today, UNKNOWN = no HTTP call occurred)
* fix warnings & remove obsolete code