@@ -3,10 +3,11 @@ package org.entur.lamassu.util;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.mobilitydata.gbfs.v2_3.gbfs.GBFSFeedName;
 
 public class GbfsUtils {
+
+  private GbfsUtils() {}
 
   public static List<GBFSFeedName> convertToGBFSFeedNameList(Object input) {
     if (input == null) {
@@ -14,13 +15,10 @@ public class GbfsUtils {
     }
 
     if (input instanceof List) {
-      return ((List<?>) input).stream()
-        .map(GbfsUtils::convertToGBFSFeedName)
-        .collect(Collectors.toList());
+      return ((List<?>) input).stream().map(GbfsUtils::convertToGBFSFeedName).toList();
     }
 
-    if (input instanceof String) {
-      String strInput = (String) input;
+    if (input instanceof String strInput) {
       if (strInput.isEmpty()) {
         return Collections.emptyList();
       }
@@ -28,7 +26,7 @@ public class GbfsUtils {
         .stream(strInput.split(","))
         .map(String::trim)
         .map(GBFSFeedName::fromValue)
-        .collect(Collectors.toList());
+        .toList();
     }
 
     throw new IllegalArgumentException(
@@ -37,11 +35,11 @@ public class GbfsUtils {
   }
 
   private static GBFSFeedName convertToGBFSFeedName(Object item) {
-    if (item instanceof GBFSFeedName) {
-      return (GBFSFeedName) item;
+    if (item instanceof GBFSFeedName gbfsFeedName) {
+      return gbfsFeedName;
     }
-    if (item instanceof String) {
-      return GBFSFeedName.fromValue((String) item);
+    if (item instanceof String gbfsFeedName) {
+      return GBFSFeedName.fromValue(gbfsFeedName);
     }
     throw new IllegalArgumentException("Cannot convert to GBFSFeedName: " + item);
   }
